add README.md and update information on package.json

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" type="text/css" href="./src/styles/main.css"> -->
-    <title>Starter Environnement</title>
+    <title>HTML5 Game Starter Environnement</title>
 </head>
 
 <body>
